update npm tags

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "keywords": [
     "react",
     "hooks",
-    "forms"
+    "hover",
+    "mouseover"
   ],
   "author": "William L <w-lindvall@outlook.com>",
   "license": "MIT",
